Platform polish. Updated CTA section-banners in pages; new bg platform art; added "next: compliance" at top of Tech section; various polish and optimizations.

--- a/source/assets/scss/modules/people.scss
+++ b/source/assets/scss/modules/people.scss
@@ -90,6 +90,7 @@ blockquote + .media-object, .blockquote-info { // line person/info up with quote
         font-size: 90%;
         font-style: italic;
         display: table; // collapses width
+        max-width: 18em;
     }
     &-role {
         display: table; // collapses width
