--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -46,7 +46,7 @@ priority: "1.0"
                 li <i class="fa fa-check"></i> 99.5% SLA
                 li <i class="fa fa-check"></i> 9-5 ticket support
               hr/
-              = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button full-width", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
+              = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button full-width", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
 
           .columns.small-12.medium-4
             .callout.drop
@@ -80,7 +80,7 @@ priority: "1.0"
                 li <i class="fa fa-check"></i> Security Audit Promise
                 li <i class="fa fa-check"></i> 4 Hour Breach Reporting
               hr/
-              = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button full-width", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
+              = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button full-width", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
           .columns.small-12.medium-4
             .callout.drop
               p.lead.text-center.relative <span class="pill-new">new</span> Licensed
