--- a/source/assets/scss/views/platform.scss
+++ b/source/assets/scss/views/platform.scss
@@ -57,6 +57,8 @@ img.soft-border{
 // expand/toggle component
 .icon-toggle {
     opacity: 0.5;
+    margin-bottom: 0.03em;
+    margin-left:   0.1em;
     @include transition(transform $timing-default, opacity $timing-default);
 }
 
