--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -110,12 +110,13 @@ section.container-gray-10.section-article
             a.text-center href="/innovation/#{report_entry.slug}" title=("Read report")
               img alt="report" src="#{report_entry.image_thumb.url}?fit=thumb&w=800" style="padding: 0 1rem 0 1rem;" /
 
-aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.ctfassets.net/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop?fit=crop&w=1600&h=500, medium]"
-  .row.align-center
-    .columns.small-12.medium-10.large-10.text-center
-      h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
-  .row.align-center
-    .columns.small-6.large-4.text-right
-      = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
-    .columns.small-6.large-6.text-left
-      = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue" }
+aside#ctaBottom.container-color--dark-grad-blue
+  .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
+    .row.align-center
+      .columns.small-12.medium-10.large-10.text-center
+        h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
+    .row.align-center
+      .columns.small-6.large-4.text-right
+        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
+      .columns.small-6.large-6.text-left
+        = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black" }
