--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -148,12 +148,13 @@ section.section-article
           p Do you handle PHI and not yet have your own company policies in place? Then you’ll find our content useful.
           = partial "partials/snippets/button", :locals => { :label => "Policies Overview", :url => "/open-source/policies", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue" }
 
-aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.ctfassets.net/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]"
-  .row.align-center
-    .columns.small-12.medium-10.large-10.text-center
-      h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
-  .row.align-center
-    .columns.small-6.large-4.text-right
-      = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
-    .columns.small-6.large-6.text-left
-      = partial "partials/snippets/button", :locals => { :label => "Hear from our Customers", :title => "Hear from our Customers", :url => "/platform/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
+aside#ctaBottom.container-color--dark-grad-blue
+  .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
+    .row.align-center
+      .columns.small-12.medium-10.large-10.text-center
+        h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
+    .row.align-center
+      .columns.small-6.large-4.text-right
+        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
+      .columns.small-6.large-6.text-left
+        = partial "partials/snippets/button", :locals => { :label => "Hear from our Customers", :title => "Hear from our Customers", :url => "/platform/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
