--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -77,7 +77,7 @@ section#tech-features.section-article.container-gray-12
         .callout.drop
           .row
             .columns.small-12.medium-8
-              h3.headline-4 <strong> #{featureCat["title"]} </strong>
+              h3.headline-4(id="featureCat_#{featureCat.slug}") #{featureCat["title"]}
               - if featureCat.has_key?("desc")
                 p = featureCat["desc"]
           .row
