Adding ids and data-track attributes to all the platform stuff for GTM.

--- a/source/partials/section-promos/_aws-mlh-video.erb
+++ b/source/partials/section-promos/_aws-mlh-video.erb
@@ -28,7 +28,9 @@ end
                     :button_classes => "button hollow small right", 
                     :icon => "icon-chevron-right", 
                     :icon_color => "blue", 
-                    :icon_align => "right"
+                    :icon_align => "right",
+                    :data_track_group => "customers",
+                    :item_id => "aws-mlh-video"
                 }
             %>
         </div>
