--- a/source/platform/_nav-platform.html.erb
+++ b/source/platform/_nav-platform.html.erb
@@ -12,5 +12,5 @@
     </li>
 <% end %>
 <li class="menu-item menu-item--cta">
-    <a class="button button--primary small" href="/pricing" title="Sign up">Pricing <i class="fa fa-angle-right icon-after"></i></a>
+    <%= partial "partials/snippets/button", :locals => { :label => "Pricing", :title => "See which tier is right for you.", :url => "/pricing", :button_classes => "button button--primary small", :icon => "icon-chevron-right", :icon_color => "white", :item_id => "top-nav", :data_track_group => "platform" } %>
 </li>
