--- a/source/platform/success.html.erb
+++ b/source/platform/success.html.erb
@@ -214,7 +214,7 @@ collectionOrder: 4
         <div class="row align-center">
             <div class="columns small-12 medium-10 text-center">
                 <h2 class="headline-3 group"><strong>End-to-end compliance</strong> on AWS and Azure is possible.</h2>
-                <p class="lead">Start your free trial today.</p>
+                <!-- <p class="lead">Start your free trial today.</p> -->
                 <%= partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" } %>
             </div>
         </div>
