Adding tracking meta in contact button at top. Also, 99.5 => 99.9 in pricing.

--- a/source/partials/snippets/_header.erb
+++ b/source/partials/snippets/_header.erb
@@ -88,7 +88,7 @@
             </div>
         </div>
         <a href="https://product.datica.com" class="menu-item--simple" target="_blank">Sign in</a>
-        <a href="/contact" id="topNavCTA" class="button <% if defined?(style) && style == "light" %> button hollow-inverted<% else %> success<% end %>">Contact us</a>
+        <a href="/contact" id="topNavCTA" data-track="true" data-track-id="contact-main" class="button <% if defined?(style) && style == "light" %> button hollow-inverted<% else %> success<% end %>">Contact us</a>
     </nav>
     <div class="mobile-menu">
         <!-- <span class="icon-label">menu</span> -->
