--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -7,6 +7,7 @@ date: "January 1, 2017"
 customCSS: "home"
 layout: "basic"
 priority: "1.0"
+collectionName: "home"
 ---
 - current_page.data.share_image = image_share_platform
 - current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
