--- a/source/partials/section-promos/_hcms-screenshot.slim
+++ b/source/partials/section-promos/_hcms-screenshot.slim
@@ -13,4 +13,4 @@
       p.lead.text-center
         span.ribbon--yellow-glow Continuous <strong>compliance</strong>, delivered.
       p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across customer environments.
-      p The HCMS is shipping with initial versions of our Licensed Platform. To learn more about the HCMS, <a href="/contact" data-track="true" data-track-group="platform" data-track-id="hcms">schedule time to talk with us today</a>.
+      p The HCMS is shipping with initial versions of our Licensed Platform. To learn more about the HCMS, <a href="/contact" data-track="true" data-track-category="platform" data-track-id="hcms">schedule time to talk with us today</a>.
