--- a/source/partials/snippets/_header.erb
+++ b/source/partials/snippets/_header.erb
@@ -1,3 +1,11 @@
+<% 
+if defined?(current_page.data.collectionName) # this is already a part of static pages/sections
+    track_category = current_page.data.collectionName
+else
+    track_category = "nav"
+end
+%>
+
 <header class="main-header main-header<% if defined?(style) && style == "light" %>--white<% end %>">
     <a href="/" class="logo" title="Datica Home"></a>
     <nav class="left">
@@ -5,10 +13,11 @@
             <div class="group input-nav input-nav--white">
                 <%= partial "partials/snippets/search-field" %>
             </div>
-            <a href="/contact" class="expanded button button--light">Contact us</a>
+            <a href="/contact" class="expanded button button--light" data-track="true" data-track-id="contact-main-mobile">Contact us</a>
         </div>
         <% data.nav_primary.nav_main.each do |m| %>
-            <%= current_link_to m.title, m.url, title: m.desc, class: "menu-item--simple", data_track: "data-track" %>
+            <%= current_link_to m.title, m.url, title: m.desc, class: "menu-item--simple", "data-track": "true", "data-track-category": track_category, "data-track-id": 'nav_' + m.title.parameterize %>
+            <!-- <%# link_to('/yourlink.html', { :class => 'your-class another-class', :"data-icon" => 'd' }) do %>Link Text<%# end %> -->
         <% end %>
     </nav>
     <nav class="right">
