--- a/source/assets/scss/modules/headers.scss
+++ b/source/assets/scss/modules/headers.scss
@@ -14,7 +14,7 @@
         font-weight: $font-weight-light;
     }
     &-3 {
-        // font-weight: $font-weight-regular;
+        font-weight: $font-weight-regular;
     }
     &-4 {
         font-weight: $font-weight-bold;
