--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -29,11 +29,10 @@ collectionName: "home"
             .card-section.text-center
               h3.headline-5 Schedule a demo to learn more.
               = partial "partials/snippets/button", :locals => { :label => "Request a demo", :url => "/demo", :button_classes => "button expanded spaced-out", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
-            .card-section.card-section--flush
-              h4.headline-4 Questions?
-              p
-                | Talk with a customer representative.
-                = partial "partials/snippets/button", :locals => { :label => "", :url => "/demo", :button_classes => "label round", :icon => "icon-comment", :icon_color => "white" }
+            .card-section.card-section--flush.text-center
+              h4.headline-5.nomargin Questions?
+              a(href="/contact" title="Let's talk.") Talk with a customer representative. 
+              = inline_svg("hubspot-chat-blue", class: "icon-inline svg-color--gray-6")
 .strip-bright
 = partial "partials/section-promos/aws-mlh-video", :locals => { :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS", :container_color => "container-gray-11" }
 section.section-article
